# text2sql-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
demo/: README.md  app_gradio.py  gradio_phase3.py
docs/: DEEP_DIVE.md  DEMO.md  NEXT_PHASES.md  benchmark.md  huggingface_space.md
notebooks/: phase1_placeholder.ipynb
scripts/: capture_demo_assets.py  download_spider.sh  smoke_test.sh
src/text2sql_rag/: __init__.py  benchmark_run.py  cli_demo.py  config.py  dev_examples.py  execution_sqlite.py  fewshot_indexer.py  gradio_dashboard.py  groq_client.py  pipeline.py  schema_indexer.py  schema_linker.py  schema_models.py  spider_loader.py  sql_generator.py  sql_validator.py
src/text2sql_rag/eval/: __init__.py
src/text2sql_rag/generators/: __init__.py
tests/: conftest.py  test_indexer.py  test_linker.py  test_validator.py
