[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sql-rag"
version = "0.1.0"
description = "Phase 1: Spider-backed schema indexing, linking, and SQL validation utilities."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Siddarthb07" }]
dependencies = [
  "chromadb>=0.4.22",
  "sentence-transformers>=2.2.2",
  "sqlglot>=20.0.0",
  "pyyaml>=6.0.1",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
text2sql-rag-demo = "text2sql_rag.cli_demo:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "gdown>=5.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
